-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.5.1, 6.5
-
None
-
-
c1f4ca60e (dev), 738dd1ea6 (6.5), 51aaced23 (6.5.1)
using effect maker from latest Qt 6.5.1 snapshots generates again errors like:
Can't read image: <working_directory_related>/qml/QtQuickEffectMaker/defaultnodes/images/qt_logo_green_rgb.png Can't read image: <working_directory_related>/qml/QtQuickEffectMaker/defaultnodes/images/quit_logo.png Can't read image: <working_directory_related>/qml/QtQuickEffectMaker/defaultnodes/images/whitecircle.png Can't read image: <working_directory_related>/qml/QtQuickEffectMaker/defaultnodes/images/blackcircle.png
- clones
-
QTBUG-109591 EffectMaker not finding default source images
-
- Closed
-
- resulted from
-
QDS-9856 macOS: Effect maker broken
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-113531 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 477470,3 | Use an alternative resources path on macOS | dev | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |
| 477502,1 | Don't bundle QQEM on macOS | dev | qt/qtquickeffectmaker | Status: ABANDONED | 0 | 0 |
| 477603,2 | Use an alternative resources path on macOS | 6.5.1 | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |
| 477604,2 | Use an alternative resources path on macOS | 6.5 | qt/qtquickeffectmaker | Status: MERGED | +2 | 0 |