Use an alternative resources path on macOS

On macOS QQEM is bundled into a different path, so relative path to
resources needs to be adjusted.

Task-number: QTBUG-113531
Change-Id: I0cf479dd37e880d93c25ab9896a80f5f82c91f59
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
(cherry picked from commit c1f4ca60eefdf2dfe05467054d4fd1cc9c213ad2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>